--- a/kubernetes/alb-ingress-controller/alb-ingress-controller.yaml
+++ b/kubernetes/alb-ingress-controller/alb-ingress-controller.yaml
@@ -23,6 +23,8 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      annotations:
+        iam.amazonaws.com/role: tsub-sandbox-alb-ingress-controller
       creationTimestamp: null
       labels:
         app: alb-ingress-controller
@@ -70,6 +72,21 @@ spec:
             # a project like kube2iam for granting access.
             #- name: AWS_SECRET_ACCESS_KEY
             #  value: SECRETVALUE
+
+            # # Integrate kube-aws-iam-controller
+            #
+            # # must be set for the AWS SDK/AWS CLI to find the credentials file.
+            # - name: AWS_SHARED_CREDENTIALS_FILE # used by golang SDK
+            #   value: /meta/aws-iam/credentials.process
+            # - name: AWS_REGION # adjust to your AWS region
+            #   value: ap-northeast-1
+
+          # # Integrate kube-aws-iam-controller
+          # volumeMounts:
+          # - name: aws-iam-credentials
+          #   mountPath: /meta/aws-iam
+          #   readOnly: true
+
           # Repository location of the ALB Ingress Controller.
           image: 894847497797.dkr.ecr.us-west-2.amazonaws.com/aws-alb-ingress-controller:v1.0.1
           imagePullPolicy: Always
@@ -82,3 +99,10 @@ spec:
       terminationGracePeriodSeconds: 30
       serviceAccountName: alb-ingress
       serviceAccount: alb-ingress
+
+      # # Integrate kube-aws-iam-controller
+      # volumes:
+      # - name: aws-iam-credentials
+      #   secret:
+      #     # secret should be named: aws-iam-<name-of-your-aws-iam-role>
+      #     secretName: aws-iam-tsub-sandbox-alb-ingress-controller
