Specify host for external-dns

--- a/kubernetes/2048/2048-ingress.yaml
+++ b/kubernetes/2048/2048-ingress.yaml
@@ -10,7 +10,8 @@ metadata:
     app: 2048-ingress
 spec:
   rules:
-    - http:
+    - host: 2048.sandbox.tsub.me
+      http:
         paths:
           - path: /*
             backend:
