--- a/kubernetes/2048/2048-ingress.yaml
+++ b/kubernetes/2048/2048-ingress.yaml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/certificate-arn: {certificate ARN of ACM}
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
   labels:
     app: 2048-ingress
 spec:
@@ -15,5 +18,9 @@ spec:
         paths:
           - path: /*
             backend:
-              serviceName: "service-2048"
+              serviceName: ssl-redirect
+              servicePort: use-annotation
+          - path: /*
+            backend:
+              serviceName: service-2048
               servicePort: 80
