Replace cluster_name with scripts/replace-variables.sh

--- a/kubernetes/external-dns/deployment.yaml
+++ b/kubernetes/external-dns/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   template:
     metadata:
       annotations:
-        iam.amazonaws.com/role: tsub-sandbox-external-dns
+        iam.amazonaws.com/role: ${sed:cluster_name}-external-dns
       labels:
         app: external-dns
     spec:
