--- a/kubernetes/kube-aws-iam-controller/example-app.yaml
+++ b/kubernetes/kube-aws-iam-controller/example-app.yaml
@@ -46,4 +46,4 @@ spec:
       - name: aws-iam-credentials
         secret:
           # secret should be named: aws-iam-<name-of-your-aws-iam-role>
-          secretName: aws-iam-tsub-sandbox-s3-access
+          secretName: aws-iam-${sed:cluster_name}-s3-access
