--- a/kubernetes/external-dns/deployment.yaml
+++ b/kubernetes/external-dns/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         args:
         - --source=service
         - --source=ingress
-        - --domain-filter=sandbox.tsub.me # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
+        - --domain-filter=${sed:route53_zone} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
         - --provider=aws
         - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
