--- a/kubernetes/external-dns/deployment.yaml
+++ b/kubernetes/external-dns/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   template:
     metadata:
       annotations:
-        iam.amazonaws.com/role: ${sed:cluster_name}-external-dns
+        iam.amazonaws.com/role: ${terraform:cluster_name}-external-dns
       labels:
         app: external-dns
     spec:
@@ -19,7 +19,7 @@ spec:
         args:
         - --source=service
         - --source=ingress
-        - --domain-filter=${sed:route53_zone} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
+        - --domain-filter=${terraform:route53_zone} # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
         - --provider=aws
         - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
         - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
