--- a/.env.skeleton
+++ b/.env.skeleton
@@ -4,5 +4,6 @@ TF_VAR_main_aws_profile=
 TF_VAR_cluster_name=
 TF_VAR_route53_main_zone=
 TF_VAR_route53_sandbox_zone=
+TF_VAR_aws_chatbot_arn_for_slack=
 TF_CLI_ARGS_plan="-parallelism=20"
 TF_CLI_ARGS_apply="-parallelism=20"
